# xcdca

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  audio_process.c  audio_process.h  audio_sr.c  audio_sr.h
main/bsp/: bsp.c  bsp.h  bsp_cache.c  bsp_cache.h  bsp_display.c  bsp_display.h  bsp_es8311.c  bsp_es8311.h  bsp_lcd.c  bsp_lcd.h  bsp_ledc.c  bsp_ledc.h  bsp_nvs.c  bsp_nvs.h  bsp_wifi.c  bsp_wifi.h  bsp_ws2812.c  bsp_ws2812.h
main/com/: Com_Debug.c  Com_Debug.h  Com_status.c  Com_status.h
main/protocol/: pro_https.c  pro_https.h  pro_mqtt.c  pro_mqtt.h  pro_websocket.c  pro_websocket.h
