idf_component_register(SRCS "main.c"
                      "./bsp/bsp_es8311.c"
                      "./bsp/bsp_wifi.c"
                      "./bsp/bsp_ws2812.c"
                      "./com/Com_Debug.c"
                      "./com/Com_status.c"
                      "./audio/audio_sr.c"
                      "./audio/audio_encoder.c"
                      "./audio/audio_decoder.c"
                      "./protocol/pro_https.c"
                      "./protocol/pro_websocket.c"
                      "./protocol/pro_mqtt.c"
                      "./audio/audio_process.c"
                      "./bsp/bsp_nvs.c"
                      "./bsp/bsp.c"
                      "./bsp/bsp_cache.c"
                      "./bsp/bsp_lcd.c"
                      "./bsp/bsp_display.c"
                      "./bsp/bsp_ledc.c"
                      INCLUDE_DIRS "."
                      "bsp"
                      "com"
                      "protocol"
                      "audio")
